fix hero on mobile

--- a/style.css
+++ b/style.css
@@ -63,11 +63,12 @@ body {
 
 header {
   background-color: black;
+  padding: 1rem;
 }
 
 header h1 {
   text-align: center;
-  font-size: 70px;
+  font-size: 5rem;
   font-weight: 950;
   animation: fade 2s;
   background: linear-gradient(110deg, #00FFFF 33%, #ffed4b 60%);
@@ -225,6 +226,10 @@ footer {
 
 /* Media Queries */
 @media screen and (max-width: 750px) {
+
+  header h1{
+    font-size: 3rem;
+  }
 
   .personal-data .flex,
   .technologies .flex {
